--- a/other.html
+++ b/other.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<p><a href="/other.html">Link</a></P>
+<h1>Other Page</h1>
+<p>This is the other page.</p>
+<p><a href="/index.html">Link</a></P>
 
 </body>
 </html>
